done connect db

--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -13,6 +13,7 @@
         <option value="">-- Chọn giới tính</option>
         <option value="male">Nam</option>
         <option value="female">Nữ</option>
+        <option value="female">Bê đê</option>
     </select>  
   </div>
 
